tests/NormalTests/paczka1/fuzzy1/93021925.err
Error in line 5: xUco3 S991 56,0
Error in line 1: b6mXIw A165 8,5
Error in line 33: b6mXIw S600 6,2
